  functions to load or disable plugins if they wish to use a different
  plugin mechanism; the --help, --version and no-command name code paths
  now use the generic pluggable command lookup infrastructure.
  (Robert Collins)

* ``bzrlib.errors.BoundBranchOutOfDate`` has a new field ``extra_help``
  which can be set to add extra help to the error. (Gary van der Merwe)

* The methods ``BzrDir.create_branch()``, ``BzrDir.destroy_branch()`` and 
  ``BzrDir.open_branch()`` now take an optional ``name`` argument. 
  (Jelmer Vernooij)

Testing
*******

* bzr now has a ``.testr.conf`` file in its source tree configured
  appropriately for running tests with Testrepository
  (``https://launchpad.net/testrepository``). (Robert Collins)

* Documentation about testing with ``subunit`` has been tweaked.
  (Robert Collins)

* New ``bzrlib.tests.test_import_tariff`` can make assertions about what
  Python modules are loaded, to guard against startup time or library
  dependency regressions.
  (Martin Pool)

* Stop sending apport crash files to ``.cache`` in the directory from
  which ``bzr selftest`` was run.  (Martin Pool, #422350)

* Tests no longer fail if "close() called during concurrent
  operation on the same file object" occurs when closing the log file
  (which can happen if a thread tries to write to the log file at the
  wrong moment).  An warning will be written to ``stderr`` when this
  happens, and another warning will be written if the log file could not
  be closed after retrying 100 times.  (Andrew Bennetts, #531746)

bzr 2.1.1
#########

:2.1.1: not released yet

Bug Fixes
*********

* Allow syscalls to automatically restart when ``TextUIFactory``'s
  SIGWINCH handler is invoked, avoiding ``EINTR`` errors during blocking
  IO, which are often poorly handled by Python's libraries and parts of
  bzrlib.  (Andrew Bennetts, #496813)

* Avoid ``malloc(0)`` in ``patiencediff``, which is non-portable.
  (Martin Pool, #331095)
